# backend_HT6

./: .gitignore  .travis.yml  a  db.sqlite3  manage.py  pyproject.toml  requerments.txt  requirements.txt
backend_HT5/: asgi.py  celery.py  middleware.py  settings.py  urls.py  wsgi.py
home/: __init__.py  admin.py  apps.py  emails.py  forms.py  models.py  serializers.py  signals.py  tasks.py  testcases.py  tests.py  views.py
home/management/commands/: delete_student.py  insert_students.py  insert_teacher.py  mix_student_and_teachers.py
home/migrations/: 0001_initial.py  0002_auto_20201220_1954.py  0003_auto_20201225_0931.py  0004_remove_student_custom_name.py  0005_student_normalized_name.py  0006_student_is_active.py  0007_auto_20210117_1709.py  0008_auto_20210117_1713.py  0009_currency.py  0010_auto_20210124_2123.py  0011_student_photo.py  0012_auto_20210313_1512.py  0013_auto_20210409_1216.py  0014_auto_20210411_1803.py
home/templates/: add_student.html  base.html  data_csv.html  data_json.html  footer.html  header.html  index.html  list_of_students.html  main_page.html  student_book_update.html  student_books.html  subject_list.html  teachers_list.html  update_student.html  update_subject.html  update_teacher.html
home/templates/email_templates/: sign_up_email.html  student_created.html
home/templates/login/: sign_in.html  sign_up_form_page.html
main_app/: views.py
