[tool.poetry]
name = "backend_ht5"
version = "0.1.0"
description = ""
authors = ["Evhen Hordiienko <hoodback@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
Django = "3.1.5"
celery = "5.0.5"

[tool.poetry.dev-dependencies]
flake8 = "3.8.4"
Faker = "5.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
